# simwood-operator

./: Cargo.toml  Dockerfile  ca.pem
kubernetes/: crd.yaml
src/: main.rs
