[package]
name = "simwood-operator"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6.1"
failure = "0.1.2"
futures = "0.1"
log = "0.4.6"
swagger = "2"
tokio-core = "0.1.6"
uuid = "0.5"
kube = { git = "https://github.com/clux/kube-rs" }
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
serde_yaml = "0.8.8"
simwood-rs = { git = "https://github.com/matt-williams/simwood-rs" , version = "1.0.1"}
hyper = "0.11"
